[gd_scene load_steps=3 format=3 uid="uid://1pajo5yeppm3"]

[ext_resource type="Script" uid="uid://cci020degr8va" path="res://Scripts/Configuracoes.gd" id="1_pl2n6"]
[ext_resource type="FontFile" uid="uid://c7ofx4fuogaot" path="res://Assets/Visuals/HUD/Dialogues Themes/Tiny5-Regular.ttf" id="2_2bj42"]

[node name="Configuracoes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pl2n6")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.33, 0.0495, 0.147675, 1)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(440, 310)
layout_mode = 0
offset_left = 100.0
offset_top = 25.0
offset_right = 540.0
offset_bottom = 335.0

[node name="MainContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoSection" type="VBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2

[node name="VideoLabel" type="Label" parent="Panel/MainContainer/VideoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Vídeo"

[node name="Resolucao" type="Label" parent="Panel/MainContainer/VideoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Resoluções"

[node name="tipo_resolucoes" type="OptionButton" parent="Panel/MainContainer/VideoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
selected = 3
item_count = 5
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1152x648"
popup/item_3/id = 3
popup/item_4/text = "640x360"
popup/item_4/id = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainContainer/VideoSection"]
layout_mode = 2

[node name="Janela" type="CheckBox" parent="Panel/MainContainer/VideoSection/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Janela"

[node name="SemBordas" type="CheckBox" parent="Panel/MainContainer/VideoSection/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Sem Bordas"

[node name="TelaCheia" type="CheckBox" parent="Panel/MainContainer/VideoSection/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Tela cheia"

[node name="HSeparator" type="HSeparator" parent="Panel/MainContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Volume"

[node name="MasterContainer" type="HBoxContainer" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Panel/MainContainer/AudioSection/MasterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Master:"

[node name="MasterSlider" type="HSlider" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="BGContainer" type="HBoxContainer" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2

[node name="BGLabel" type="Label" parent="Panel/MainContainer/AudioSection/BGContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Música:"

[node name="BGSlider" type="HSlider" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXContainer" type="HBoxContainer" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Panel/MainContainer/AudioSection/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Efeitos:"

[node name="SFXSlider" type="HSlider" parent="Panel/MainContainer/AudioSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="Panel/MainContainer"]
layout_mode = 2

[node name="ButtonContainer" type="CenterContainer" parent="Panel/MainContainer"]
layout_mode = 2

[node name="Voltar" type="Button" parent="Panel/MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2bj42")
text = "Voltar"

[connection signal="item_selected" from="Panel/MainContainer/VideoSection/tipo_resolucoes" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="Panel/MainContainer/VideoSection/HBoxContainer/Janela" to="." method="_on_windowed_pressed"]
[connection signal="pressed" from="Panel/MainContainer/VideoSection/HBoxContainer/SemBordas" to="." method="_on_borderless_pressed"]
[connection signal="pressed" from="Panel/MainContainer/VideoSection/HBoxContainer/TelaCheia" to="." method="_on_full_screen_pressed"]
[connection signal="value_changed" from="Panel/MainContainer/AudioSection/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Panel/MainContainer/AudioSection/BGSlider" to="." method="_on_bg_slider_value_changed"]
[connection signal="value_changed" from="Panel/MainContainer/AudioSection/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Panel/MainContainer/ButtonContainer/Voltar" to="." method="_on_back_pressed"]
